Added 5 Icons + 1 Alt Icon (#631)
* Add files via upload

* Delete Carrefour.png

* Delete Carrefour.svg

* Add files via upload

* Update new_icons.yaml

* Add files via upload

* Delete 2B.png

* Delete 2B.svg

* Delete Carrefour MAF.png

* Delete Carrefour MAF.svg

* Delete Google Authenticator Alt.png

* Delete Google Authenticator Alt.svg

* Delete Sarhne.png

* Delete Sarhne.svg

* Delete Talabat.png

* Delete Talabat.svg

* Delete Wasla.png

* Delete Wasla.svg

* Add files via upload

* Update new_icons.yaml

---------

Co-authored-by: Evgeny <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -165,6 +165,23 @@ voloco:
 pluot:
    - app.cordes.pluot/app.cordes.pluot.home.LaunchActivity
    
+google_authenticator_alt_1: {}
+
+_2b:
+   - com.twoebgypt.android/com.twobe.twobe.activites.SplashScreenActivity
+   
+carrefour_maf:
+   - com.aswat.carrefouruae/com.aswat.carrefouruae.feature.splash.view.activity.SplashActivity
+   
+talabat:
+   - com.talabat/com.talabat.LandingScreen
+   
+wasla:
+   - io.botler.wasla/io.botler.MainActivity
+   
+sarhne:
+   - app.sarhne.com/app.sarhne.com.Start
+
 1gallery:
    - app.galleryx/app.galleryx.activity.MainActivity
    
