--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -165,6 +165,24 @@ voloco:
 pluot:
    - app.cordes.pluot/app.cordes.pluot.home.LaunchActivity
 
+_2fas:
+   - com.twofasapp/com.twofasapp.ui.main.StartActivity
+
+linkbox:
+   - me.loyko.ronald.linkbox/me.loyko.ronald.linkbox.MainActivity
+
+presently:
+   - journal.gratitude.com.gratitudejournal/journal.gratitude.com.gratitudejournal.ContainerActivity
+
+unitto:
+   - com.sadellie.unitto/com.sadellie.unitto.MainActivity
+
+ytdlnis:
+   - com.deniscerri.ytdl/com.deniscerri.ytdlnis.MainActivity
+
+stack:
+   - me.tylerbwong.stack/me.tylerbwong.stack.ui.MainActivity
+
 cmc_markets:
    - com.cmcmarkets.android.cfd/com.cmcmarkets.android.activities.InitialLoadingFragmentActivity
 
