new compinfo: Edeka

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -9,6 +9,9 @@
 # new_icon_2_alt_1: {}
 #
 
+edeka:
+   - de.edeka.genuss/edeka.digital.app.edeka2020.ui.SplashActivity
+
 ac_unity:
    - com.ubisoft.assassin.unity.companion/com.nora.unity_custom_activity.NoraCustomActivity
    
