--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -286,3 +286,15 @@ xenowerk:
    
 yoodo:
    - com.celcom.yoodo/com.zoontek.rnbootsplash.RNBootSplashActivity
+   
+btech:
+   - com.btechapp/com.btechapp.presentation.ui.splash.SplashActivity
+   
+every_circuit:
+   - com.everycircuit.free/com.everycircuit.HomeLauncher
+   
+exodus_privacy:
+   - org.eu.exodus_privacy.exodusprivacy/org.eu.exodus_privacy.exodusprivacy.MainActivity
+   
+proto_circuit_simulator:
+   - com.proto.circuitsimulator/com.proto.circuitsimulator.splash.SplashActivity
