--- a/.github/workflows/build_foss.yml
+++ b/.github/workflows/build_foss.yml
@@ -12,10 +12,6 @@ on:
         description: Version code
         default: 100000
         required: true
-      sign:
-        description: Sign APK
-        default: false
-        type: boolean
 
 env:
   filename: delta-v${{ inputs.version_name }}-foss
@@ -97,16 +93,8 @@ jobs:
     - name: Move unsigned APK
       run: mv -v app/build/outputs/apk/foss/release/*.apk ${{ env.filename }}-unsigned.apk
 
-    - name: Upload unsigned APK in Artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ env.filename }}-unsigned
-        retention-days: 7
-        path: ${{ env.filename }}-unsigned.apk
-
     - name: Sign APK
-      uses: kevin-david/zipalign-sign-android-release@v1.1
-      if: inputs.sign == true
+      uses: kevin-david/zipalign-sign-android-release@v1.1.1
       id: sign_step
       with:
         releaseDirectory: .
@@ -116,13 +104,11 @@ jobs:
         alias: ${{ secrets.KEYSTORE_KEY_ALIAS }}
 
     - name: Move signed APK
-      if: inputs.sign == true
-      run: mv -v ${{ steps.sign_step.outputs.signedReleaseFile }} ${{ env.filename }}-signed.apk
+      run: mv -v ${{ steps.sign_step.outputs.signedReleaseFile }} ${{ env.filename }}.apk
 
     - name: Upload signed APK in Artifacts
       uses: actions/upload-artifact@v3
-      if: inputs.sign == true
       with:
-        name: ${{ env.filename }}-signed
+        name: ${{ env.filename }}
         retention-days: 7
-        path: ${{ env.filename }}-signed.apk
+        path: ${{ env.filename }}.apk
