add missing token value to the workflow

--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -341,3 +341,4 @@ jobs:
       with:
         workflow: deploy.yml
         repo: ${{ github.repository_owner }}/delta-icons.github.io
+        token: ${{ secrets.PA_TOKEN }}
