add missing icons, sort appfilter, rename some icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,27 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+cookie_clickers:
+  - org.dashnet.cookieclicker/org.dashnet.cookieclicker.MainActivity
+
+urent:
+  - ru.urentbike.app/ru.urentbike.feature_splash_screen_impl.presentation.SplashContainerActivity
+
+strelka:
+  - ru.uec.strelka/ru.uec.strelka.MainActivity
+
+avtoto:
+  - ru.avtoto.app/ru.avtoto.app.ui.splash.SplashScreenActivity
+
+_1gallery:
+  - app.galleryx/app.galleryx.activity.MainActivity
+
+uniqlo:
+  - com.uniqlo.my.catalogue/com.uniqlo.ja.catalogue.view.mobile.home.HomeActivity
+
+the_talos_principle:
+  - com.devolver.Talos/com.devolver.InitialActivityCT
+
+stack_for_stackoverflow:
+  - me.tylerbwong.stack/me.tylerbwong.stack.ui.MainActivity
