--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -9,284 +9,30 @@
 # new_icon_2_alt_1: {}
 #
 
-edeka:
-   - de.edeka.genuss/edeka.digital.app.edeka2020.ui.SplashActivity
+cookie_clickers:
+  - org.dashnet.cookieclicker/org.dashnet.cookieclicker.MainActivity
 
-ac_unity:
-   - com.ubisoft.assassin.unity.companion/com.nora.unity_custom_activity.NoraCustomActivity
-   
-bartbonte_orange:
-   - air.com.bartbonte.orange/air.com.bartbonte.orange.AIRAppEntry
-   
-camcov:
-   - ryey.camcov/ryey.camcov.SettingsActivity
-   
-celestia:
-   - space.celestia.mobilecelestia/space.celestia.mobilecelestia.MainActivity
-   
-cheogram:
-   - com.cheogram.android/eu.siacs.conversations.ui.ConversationActivity
-   
-colors_ai:
-   - is.tsin.colors_ai.colors_ai/is.tsin.colors_ai.colors_ai.MainActivity
-   
-cube_escape_arles:
-   - air.com.RustyLake.CubeEscapeArles/air.com.RustyLake.CubeEscapeArles.AppEntry
-   
-cube_escape_birthday:
-   - air.com.RustyLake.CubeEscapeBirthday/air.com.RustyLake.CubeEscapeBirthday.AppEntry
-   
-cube_escape_case_23:
-   - air.com.RustyLake.CubeEscapeCase23/air.com.RustyLake.CubeEscapeCase23.AppEntry
-   
-cube_escape_collection:
-   - air.com.RustyLake.CubeEscapeCollection/air.com.RustyLake.CubeEscapeCollection.AppEntry
-   
-cube_escape_seasons:
-   - air.com.RustyLake.CubeEscapeSeasons/air.com.RustyLake.CubeEscapeSeasons.AppEntry
-   
-cube_escape_theatre:
-   - air.com.RustyLake.CubeEscapeTheatre/air.com.RustyLake.CubeEscapeTheatre.AppEntry
-   
-cube_escape_the_cave:
-   - air.com.RustyLake.CubeEscapeTheCave/air.com.RustyLake.CubeEscapeTheCave.AppEntry
-   
-cube_escape_the_lake:
-   - air.com.RustyLake.CubeEscapeTheLake/air.com.RustyLake.CubeEscapeTheLake.AppEntry
-   
-cube_escape_the_mill:
-   - air.com.RustyLake.CubeEscapeTheMill/air.com.RustyLake.CubeEscapeTheMill.AppEntry
-   
-donut_county:
-   - com.annapurnainteractive.DonutCounty/com.unity3d.player.UnityPlayerActivity
-   
-dr_web:
-   - com.drweb/com.drweb.ui.main.MainActivity
-   
-dukto:
-   - it.msec.dukto/it.msec.dukto.Dukto
-   
-folder_widget:
-   - pub.hanks.appfolderwidget/com.android.app.ap.h.MainActivity
-   
-fpse:
-   - com.emulator.fpse/com.emulator.fpse.Main
-   - com.emulator.fpse64/com.emulator.fpse64.Main
-   - com.emulator.fpse/com.emulator.fpse.mobi.vserv.android.appwrapper.VservAdManager
-   
-functional_ear_trainer:
-   - com.kaizen9.fet.android/com.kaizen9.fet.android.AndroidLauncher
-   
-game_dev_tycoon:
-   - com.greenheartgames.gdt/com.unity3d.player.UnityPlayerActivity
-   
-garage_bad_dream_adventure:
-   - com.SmokymonkeyS.garage/com.unity3d.player.UnityPlayerActivity
-   
-gdevelop:
-   - io.gdevelop.ide/io.gdevelop.ide.MainActivity
-   
-ghost_commander:
-   - com.ghostsq.commander/com.ghostsq.commander.FileCommander
-   
-gittouch:
-   - io.github.pd4d10.gittouch/io.github.pd4d10.gittouch.MainActivity
-   
-heymelody:
-   - com.heytap.headset/com.heytap.headset.component.startup.StartupActivity
-   
-hook_2:
-   - com.RainbowTrain.Hook2/com.unity3d.player.UnityPlayerActivity
-   
-klepon:
-   - com.bandot.klepon.darkiconpack/com.bandot.klepon.darkiconpack.activities.SplashActivity
-   
-klepon_wheel:
-   - com.bandot.klepon.wheel.darkiconpack/com.bandot.klepon.wheel.darkiconpack.activities.SplashActivity
-   
-lavabit_encrypted_proxy:
-   - com.lavabit.pahoehoe/com.lavabit.pahoehoe.base.StartActivity
-   
-leaf_kwgt:
-   - com.leafkwgt.pack/com.leafkwgt.pack.MainActivity
-   
-linconnect:
-   - com.willhauck.linconnectclient/com.willhauck.linconnectclient.SettingsActivity
-   
-mars_mars:
-   - com.pomelogames.MarsGame/com.unity3d.player.UnityPlayerActivity
-   
-mental_math_master:
-   - com.fivedaysweekend.math/com.fivedaysweekend.math.activities.StartActivity
+urent:
+  - ru.urentbike.app/ru.urentbike.feature_splash_screen_impl.presentation.SplashContainerActivity
 
-music_racer:
-   - com.abstractart.music_racer/com.unity3d.player.UnityPlayerActivity
-   
-my_moon_phase:
-   - com.jrustonapps.mymoonphase/com.jrustonapps.mymoonphase.controllers.MainActivity
+strelka:
+  - ru.uec.strelka/ru.uec.strelka.MainActivity
 
-nomachine:
-   - com.nomachine.nxplayer/org.qtproject.qt5.android.bindings.QtActivity
-   
-opsu:
-   - fluddokt.opsu.android/fluddokt.opsu.android.AndroidLauncher
-   
-pekka_kana_2:
-   - org.pgnapps.pk2/org.pgnapps.pk2.PK2Activity
-   
-retry:
-   - com.rovio.retry/com.prime31.UnityPlayerNativeActivity
-   
-rsdkv5:
-   - org.rems.rsdkv5/org.rems.rsdkv5.Launcher
-   
-south_park_phone_destroyer:
-   - com.ubisoft.dragonfire/com.ubisoft.dragonfireandroidplugin.DFMainActivity
-   
-supertux_classic:
-   - org.godotengine.supertuxclassic/com.godot.game.GodotApp
-   
-temu:
-   - com.einnovation.temu/com.baogong.splash.activity.MainFrameActivity
-   
-tapet_wallpapers:
-   - com.sharpregion.tapet/com.sharpregion.tapet.main.home.HomeActivity 
-   - com.sharpregion.tapet/com.sharpregion.tapet.root.RootActivity
-   
-to_the_moon:
-   - com.xd.tothemoon/com.xd.tothemoon.ToTheMoonActivity
+avtoto:
+  - ru.avtoto.app/ru.avtoto.app.ui.splash.SplashScreenActivity
 
-turnip:
-   - gg.turnip.android/gg.turnip.android.ui.splashscreen.SplashScreenActivity
-   
-virustotal:
-   - com.funnycat.virustotal/com.funnycat.virustotal.ui.splash.SplashActivity
-   
-voloco:
-   - com.jazarimusic.voloco/com.jazarimusic.voloco.ui.LauncherActivity
-   
-pluot:
-   - app.cordes.pluot/app.cordes.pluot.home.LaunchActivity
+_1gallery:
+  - app.galleryx/app.galleryx.activity.MainActivity
 
-_2fas:
-   - com.twofasapp/com.twofasapp.ui.main.StartActivity
+uniqlo:
+  - com.uniqlo.my.catalogue/com.uniqlo.ja.catalogue.view.mobile.home.HomeActivity
 
-linkbox:
-   - me.loyko.ronald.linkbox/me.loyko.ronald.linkbox.MainActivity
+the_talos_principle:
+  - com.devolver.Talos/com.devolver.InitialActivityCT
 
-presently:
-   - journal.gratitude.com.gratitudejournal/journal.gratitude.com.gratitudejournal.ContainerActivity
-
-unitto:
-   - com.sadellie.unitto/com.sadellie.unitto.MainActivity
-
-ytdlnis:
-   - com.deniscerri.ytdl/com.deniscerri.ytdlnis.MainActivity
-
-stack:
-   - me.tylerbwong.stack/me.tylerbwong.stack.ui.MainActivity
-
-cmc_markets:
-   - com.cmcmarkets.android.cfd/com.cmcmarkets.android.activities.InitialLoadingFragmentActivity
-
-tripcom: 
-   - ctrip.english/com.ctrip.ibu.myctrip.main.module.home.IBUHomeActivity
-
-paystay:
-   - au.com.paystay/au.com.paystay.LauncherActivity
-
-sbs_news:
-   - com.sbs.worldnewsaustralia/au.com.sbs.mobilex.news.modules.splash.SplashActivity
-
-dropsync:
-   - com.ttxapps.dropsync/com.ttxapps.sync.app.MainActivity
-   
-google_authenticator_alt_1: {}
-
-_2b:
-   - com.twoebgypt.android/com.twobe.twobe.activites.SplashScreenActivity
-   
-carrefour_maf:
-   - com.aswat.carrefouruae/com.aswat.carrefouruae.feature.splash.view.activity.SplashActivity
-   
-talabat:
-   - com.talabat/com.talabat.LandingScreen
-   
-wasla:
-   - io.botler.wasla/io.botler.MainActivity
-   
-sarhne:
-   - app.sarhne.com/app.sarhne.com.Start
-
-1gallery:
-   - app.galleryx/app.galleryx.activity.MainActivity
-   
-awesome_devil:
-   - studio.gameberry.Crow/com.google.firebase.MessagingUnityPlayerActivity
-   
-bitrix24:
-   - com.bitrix24.android/com.bitrix24.android.BX24Activity
-   
-chirp_access:
-   - com.chirp.access/com.chirp.access.MainActivity
-   
-dice_fm:
-   - fm.dice/fm.dice.splash.presentation.views.SplashActivity
-   
-dji_mimo:
-   - dji.mimo/dji.mimo.main.DJISplashActivity
-   
-dsub:
-   - github.daneren2005.dsub/github.daneren2005.dsub.activity.SubsonicFragmentActivity
-   
-gameloft_classics:
-   - com.gameloft.android.ANMP.GloftGLCL/com.gameloft.android.ANMP.GloftGLCL.Start
-   
-inkblot:
-   - com.inkblotapp.android/com.inkblotapp.android.MainActivity
-   
-legend_of_slime:
-   - com.loadcomplete.slimeidle/com.loadcomplete.UnityPlayerActivityExtension
-   
-my_nintendo:
-   - com.nintendo.znej/jp.co.nintendo.entry.ui.bootsequence.BootActivity
-   
-noisefit_prime:
-   - com.noisefit.prime/com.yc.pedometer.SplashActivity
-   
-nothing_system_service:
-   - com.nothing.appservice/com.nothing.appservice.MainActivity
-   
-promobit:
-   - br.com.promobit.app/br.com.promobit.app.ui.splash.SplashScreenActivity
-   
-race_the_sun:
-   - com.flippfly.racethesun/com.google.firebase.MessagingUnityPlayerActivity
-   
-samsung_deco_pic:
-   - com.samsung.android.livestickers/com.samsung.android.livestickers.camera.ShortcutActivity
-   
-shortform:
-   - com.shortform.app/com.shortform.app.MainActivity
-   
-sketchar:
-   - ktech.sketchar/ktech.sketchar.ZeroActivity
-   
-skiley:
-   - net.skiley.mobile/net.skiley.skiley_mobile.MainActivity
-   
-steezy:
-   - co.steezy.app/co.steezy.app.activity.main.StartupActivity
-   
-wavy_wallpapers:
-   - wavy.walls.droidbeauty.pack/wavy.walls.droidbeauty.pack.MainActivity
-   
-xenowerk:
-   - com.pixelbite.mutant/com.pixelbite.bite.BiteSplashScreen
-   
-yoodo:
-   - com.celcom.yoodo/com.zoontek.rnbootsplash.RNBootSplashActivity
-   
+stack_for_stackoverflow:
+  - me.tylerbwong.stack/me.tylerbwong.stack.ui.MainActivity
+  
 chetak:
   - com.bajajmychetak/com.zoontek.rnbootsplash.RNBootSplashActivity
   
@@ -295,15 +41,3 @@ carinfo:
 
 basic_call_recorder:
   - com.chiller3.bcr/com.chiller3.bcr.SettingsActivity
-
-btech:
-   - com.btechapp/com.btechapp.presentation.ui.splash.SplashActivity
-   
-every_circuit:
-   - com.everycircuit.free/com.everycircuit.HomeLauncher
-   
-exodus_privacy:
-   - org.eu.exodus_privacy.exodusprivacy/org.eu.exodus_privacy.exodusprivacy.MainActivity
-   
-proto_circuit_simulator:
-   - com.proto.circuitsimulator/com.proto.circuitsimulator.splash.SplashActivity
