--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -66,3 +66,15 @@ one_plus_sound_recorder:
   - com.oneplus.soundrecorder/oplus.multimedia.soundrecorder.filebrowser.BrowseFile
 
 adobe: {}
+
+a_slight_chance_of_sawblades:
+  - com.chinykian.aslightchanceofsawblades/com.chinykian.aslightchanceofsawblades.RunnerActivity
+
+mucke:
+  - rocks.mucke/com.ryanheise.audioservice.AudioServiceActivity
+
+rain:
+  - com.yoshi.rain/com.example.rain.MainActivity
+
+waterfly_iii:
+  - com.dreautall.waterflyiii/com.dreautall.waterflyiii.MainActivity
