--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -78,3 +78,6 @@ rain:
 
 waterfly_iii:
   - com.dreautall.waterflyiii/com.dreautall.waterflyiii.MainActivity
+
+dooz:
+  - io.github.yamin8000.dooz/io.github.yamin8000.dooz.content.FreeMainActivity
