--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -67,6 +67,26 @@ one_plus_sound_recorder:
 
 adobe: {}
 
+niagara_launcher_alt_1: {}
+
+osn:
+ - com.osn.go/com.osn.go.ui.mainactivity.MainActivity
+ 
+shahid:
+ - net.mbc.shahid/net.mbc.shahid.activities.SplashActivity
+ 
+stario_launcher:
+ - com.stario.launcher/com.stario.launcher.Launcher
+ 
+ tod:
+  - com.todtv.tod/axis.android.sdk.app.startup.ui.StartupActivity
+  
+ watch_it:
+  - com.watchit.vod/com.watchit.vod.ui.view.splash.FirstRunSplashActivity
+  
+ yasan_launcher:
+  - yasan.space.mnml.ai.launcher/dev.yasan.launcher.legacy.ui.main.MainActivity
+
 a_slight_chance_of_sawblades:
   - com.chinykian.aslightchanceofsawblades/com.chinykian.aslightchanceofsawblades.RunnerActivity
 
