--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,6 +33,15 @@ the_talos_principle:
 stack_for_stackoverflow:
   - me.tylerbwong.stack/me.tylerbwong.stack.ui.MainActivity
 
+chetak:
+  - com.bajajmychetak/com.zoontek.rnbootsplash.RNBootSplashActivity
+  
+carinfo:
+  - com.cuvora.carinfo/com.cuvora.carinfo.splash.SplashScreenActivity
+
+basic_call_recorder:
+  - com.chiller3.bcr/com.chiller3.bcr.SettingsActivity
+
 adobe_analytics:
   - com.adobe.analyticsdashboards/com.adobe.analyticsdashboards.MainActivity
 
