--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -110,3 +110,10 @@ waterfly_iii:
 
 dooz:
   - io.github.yamin8000.dooz/io.github.yamin8000.dooz.content.FreeMainActivity
+
+myfawry:
+ - com.fawry.myfawry/com.emeint.android.mwallet2.view.StartupActivity
+ 
+pocketcasts_alt_2: {}
+
+_1password_alt_1: {}
