new icons and compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -117,3 +117,30 @@ myfawry:
 pocketcasts_alt_2: {}
 
 _1password_alt_1: {}
+
+_2048:
+  - com.gabrielecirulli.app2048/com.gabrielecirulli.app2048.MainActivity
+
+jami:
+  - cx.ring/cx.ring.client.HomeActivity
+
+webapp:
+  - md.elway.webapp/md.elway.webapp.screen.loader.LoaderActivity
+
+capital_one_uk:
+  - com.ie.capitalone.uk/capitalone.com.comobileapp.startup.defaultIcon
+
+inbank:
+  - it.phoenixspa.inbank/it.phoenixspa.inbank.lib.activities.InbankMobile
+
+stash_games_tracker:
+  - io.stashteam.games.tracker.stashapp/io.stashteam.stashapp.ui.splash.SplashActivity
+
+gradeway:
+  - com.srujan.up_grade_app/com.srujan.up_grade_app.MainActivity
+
+caribou_coffee:
+  - com.caribou.caribouapp/com.caribou.caribouapp.MainActivity
+
+bitlord:
+  - com.houseoflife.bitlord/org.proninyaroslav.libretorrent.ui.main.MainActivity
