add missing ComponentInfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,3 +10,11 @@
 #
 vars_vr_video_player:
   - com.abg.VRVideoPlayer/com.prime31.UnityPlayerNativeActivity
+
+medibuddy_alt_1: {}
+
+wordbook:
+  - code.aquaria.wordbook/code.aquaria.wordbook.wordbook.MainActivity
+
+weather:
+  - com.coloros.weather2/com.oplus.weather.main.view.WeatherMainActivity
