--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -18,3 +18,6 @@ wordbook:
 
 weather:
   - com.coloros.weather2/com.oplus.weather.main.view.WeatherMainActivity
+
+adguard_home_manager:
+  - com.jgeek00.adguard_home_manager/com.jgeek00.adguard_home_manager.MainActivity
