--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,4 +20,4 @@ weather:
   - com.coloros.weather2/com.oplus.weather.main.view.WeatherMainActivity
 
 meetup_for_organizers:
-  - com.meetup/com.meetup.organizer
+  - com.meetup.organizer/com.meetup.organizer.MainActivity
