Add icon for Meetup for Organizers (#643)
* Add icon for Meetup for Organizers

* Fix path

Thanks @vimalsonwani for the suggestion

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -18,3 +18,6 @@ wordbook:
 
 weather:
   - com.coloros.weather2/com.oplus.weather.main.view.WeatherMainActivity
+
+meetup_for_organizers:
+  - com.meetup.organizer/com.meetup.organizer.MainActivity
