new icon: AdGuard Home Manager (#642)
* Add files via upload

* Update new_icons.yaml

---------

Co-authored-by: Evgeny <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -19,5 +19,8 @@ wordbook:
 weather:
   - com.coloros.weather2/com.oplus.weather.main.view.WeatherMainActivity
 
+adguard_home_manager:
+  - com.jgeek00.adguard_home_manager/com.jgeek00.adguard_home_manager.MainActivity
+
 meetup_for_organizers:
   - com.meetup.organizer/com.meetup.organizer.MainActivity
