--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -24,3 +24,9 @@ adguard_home_manager:
 
 meetup_for_organizers:
   - com.meetup.organizer/com.meetup.organizer.MainActivity
+
+lunasea:
+  - app.lunasea.lunasea/app.lunasea.lunasea.MainActivity
+  
+vocechat:
+  - com.privoce.vocechatclient/com.privoce.vocechatclient.MainActivity
