new icons & links

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -30,3 +30,12 @@ lunasea:
   
 vocechat:
   - com.privoce.vocechatclient/com.privoce.vocechatclient.MainActivity
+
+kinopoisk:
+  - ru.kinopoisk.tv/ru.kinopoisk.tv.presentation.splash.SplashActivity
+
+vibe:
+  - me.lucky.vibe/me.lucky.vibe.MainActivity
+
+icq:
+  - com.icq.mobile.client/ru.mail.instantmessanger.flat.main.MainActivity
