add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -39,3 +39,9 @@ vibe:
 
 icq:
   - com.icq.mobile.client/ru.mail.instantmessanger.flat.main.MainActivity
+
+nothing_recorder:
+  - com.nothing.soundrecorder/com.nothing.soundrecorder.ui.NewMainActivity
+
+db_ausflug:
+  - com.deutschebahn.ausflug/com.deutschebahn.ausflug.ui.activities.splashscreen.SplashActivity
