--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -45,3 +45,24 @@ nothing_recorder:
 
 db_ausflug:
   - com.deutschebahn.ausflug/com.deutschebahn.ausflug.ui.activities.splashscreen.SplashActivity
+
+autosync_google_drive:
+  - com.ttxapps.drivesync/com.ttxapps.sync.app.MainActivity
+
+opennet:
+  - ru.opennet.opennet/ru.opennet.opennet.MainActivity
+
+cbc_sports:
+  - com.handmark.sportcaster/com.handmark.sportcaster.Navigator
+
+tiaa:
+  - com.mobile.tiaa.cref/com.mobile.tiaa.cref.activities.SplashScreenActivity
+
+author_today:
+  - app.author.today.authortoday/app.author.today.start.presentation.view.StartActivity
+
+virgin_australia:
+  - com.virginaustralia.vaapp/com.virginaustralia.vaapp.SplashScreenActivity
+
+bci:
+  - cl.bci.app.personas/cl.bci.app.personas.presentation.splash.SplashActivity
