add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -66,3 +66,6 @@ virgin_australia:
 
 bci:
   - cl.bci.app.personas/cl.bci.app.personas.presentation.splash.SplashActivity
+
+nab:
+  - au.com.nab.mobile/LauncherActivityAlias.Default
