add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -27,7 +27,7 @@ meetup_for_organizers:
 
 lunasea:
   - app.lunasea.lunasea/app.lunasea.lunasea.MainActivity
-  
+
 vocechat:
   - com.privoce.vocechatclient/com.privoce.vocechatclient.MainActivity
 
@@ -69,3 +69,6 @@ bci:
 
 nab:
   - au.com.nab.mobile/LauncherActivityAlias.Default
+
+whoosh_sharing:
+  - com.punicapp.whoosh/com.punicapp.whoosh.activities.ClientSplashActivity
