--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,26 @@
 #
 # new_icon_2_alt_1: {}
 #
+fastlyrics:
+  - io.github.teccheck.fastlyrics/io.github.teccheck.fastlyrics.MainActivity
+
+hammer:
+  - com.darkrockstudios.apps.hammer.android/com.darkrockstudios.apps.hammer.android.ProjectSelectActivity
+
+next_player:
+  - dev.anilbeesetti.nextplayer/dev.anilbeesetti.nextplayer.MainActivity
+
+plainapp:
+  - com.ismartcoding.plain/com.ismartcoding.plain.ui.MainActivity
+
+table_habit:
+  - io.github.friesi23.mhabit/io.github.friesi23.mhabit.MainActivity
+
+tetherfi:
+  - com.pyamsoft.tetherfi/com.pyamsoft.tetherfi.main.MainActivity
+
+tunedetective:
+  - com.n0tavailable.tunedetective/com.n0tavailable.tunedetective.MainActivity
+
+yggdrasil:
+  - eu.neilalexander.yggdrasil/eu.neilalexander.yggdrasil.MainActivity
