--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -31,3 +31,9 @@ tunedetective:
 
 yggdrasil:
   - eu.neilalexander.yggdrasil/eu.neilalexander.yggdrasil.MainActivity
+
+gallery_for_android:
+  - com.dot.gallery/com.dot.gallery.feature_node.presentation.main.MainActivity
+
+youtube_music_revanced:
+  - app.rvx.android.apps.youtube.music/com.google.android.apps.youtube.music.activities.MusicActivity
