new 3 icons, 2 compinfo links

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -37,3 +37,18 @@ gallery_for_android:
 
 youtube_music_revanced:
   - app.rvx.android.apps.youtube.music/com.google.android.apps.youtube.music.activities.MusicActivity
+
+pyatyorochka:
+  - ru.pyaterochka.app.browser/ru.pyaterochka.app.launch.Launcher
+
+fixprice:
+  - ru.bestprice.fixprice/ru.bestprice.fixprice.application.splash.ui.SplashActivity
+
+consultantplus:
+  - com.consultantplus.app/com.consultantplus.app.home.HomeActivity
+
+grustnogram:
+  - com.tokarevco.grustnogram/com.tokarevco.grustnogram.MainActivity
+
+scotiabank:
+  - com.scotiabank.cca.mobile/com.scotiabank.nova.Launcher
