2 new icons, 1 compinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -52,3 +52,12 @@ grustnogram:
 
 scotiabank:
   - com.scotiabank.cca.mobile/com.scotiabank.nova.Launcher
+
+ball2box:
+  - com.simondalvai.ball2box/com.godot.game.GodotApp
+
+thunder:
+  - com.hjiangsu.thunder/com.hjiangsu.thunder.MainActivity
+
+libretube:
+  - com.github.libretube/com.github.libretube.Default
