new 4 icons, 1 compinfo links

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -61,3 +61,18 @@ thunder:
 
 libretube:
   - com.github.libretube/com.github.libretube.Default
+
+pavlok:
+  - com.pavlok3.core/com.pavlok3.core.ui.SplashActivity
+
+zhishi:
+  - me.alex.pet.apps.zhishi/me.alex.pet.apps.zhishi.presentation.HostActivity
+
+rencredit:
+  - cz.bsc.rc/ru.rencredit.authorization.splash.presentation.SplashActivity
+
+izi:
+  - com.evo.izi.obyavleniya/com.evo.izi.pages.splash.SplashActivity
+
+ort:
+  - com.ipspirates.ort/ru.tv1.android.MainActivity
