--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,9 @@
 #
 # new_icon_2_alt_1: {}
 #
+gptassist:
+  - org.woheller69.gptassist/org.woheller69.gptassist.MainActivity
+    
+perspective:
+  - com.dan.perspective/com.dan.perspective.MainActivity
+  
