add signal alts

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,35 @@
 #
 # new_icon_2_alt_1: {}
 #
+signal_alt_3:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltWhite
+
+signal_alt_4:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltColor
+
+signal_alt_5:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltDark
+
+signal_alt_6:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltDarkVariant
+
+signal_alt_7:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltChat
+
+signal_alt_8:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltBubbles
+
+signal_alt_9:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltYellow
+
+signal_alt_10:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltNews
+
+signal_alt_11:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltNotes
+
+signal_alt_12:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltWeather
+
+signal_alt_13:
+  - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltWaves
