--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -40,3 +40,6 @@ signal_alt_12:
 
 signal_alt_13:
   - org.thoughtcrime.securesms/org.thoughtcrime.securesms.RoutingActivityAltWaves
+
+taru:
+  - com.taru/com.taru.ui.MainActivity
