--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -43,3 +43,9 @@ signal_alt_13:
 
 taru:
   - com.taru/com.taru.ui.MainActivity
+
+arcticons_you:
+  - com.donnnno.arcticons.you/com.donnnno.arcticons.activities.SplashActivity
+
+simplemp:
+  - com.lighttigerxiv.simple.mp/com.lighttigerxiv.simple.mp.compose.activities.main.MainActivity
