--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -49,3 +49,15 @@ arcticons_you:
 
 simplemp:
   - com.lighttigerxiv.simple.mp/com.lighttigerxiv.simple.mp.compose.activities.main.MainActivity
+
+diskinfo:
+  - com.drhowdydoo.diskinfo/com.drhowdydoo.diskinfo.activity.MainActivity
+
+showly:
+  - com.michaldrabik.showly_oss/com.michaldrabik.showly_oss.ui.main.MainActivity
+
+loklok:
+  - com.artem.scotepio/com.loklok.flash.android.MainActivity
+
+firefox_focus:
+  - org.mozilla.focus.beta/org.mozilla.focus.activity.MainActivity
