--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -61,3 +61,23 @@ loklok:
 
 firefox_focus:
   - org.mozilla.focus.beta/org.mozilla.focus.activity.MainActivity
+
+catawiki:
+  - com.catawiki2/com.catawiki2.activity.SplashActivity
+
+givelify:
+  - com.pushcontrolz.givelify/com.givelify.android.presentation.features.home.splash.SplashActivity
+
+money_tracker_infinite:
+  - com.ktechsystems.moneytrackerpro/com.ktechsystems.moneytrackerpro.MainActivity
+
+paysafecard:
+  - at.paysafecard.android/at.paysafecard.android.LauncherActivity
+
+scotia_movil:
+  - com.ingsw.scotiabankapp/com.ingsw.scotiabankapp.introduction.SplashActivity
+
+subway_tooter:
+  - jp.juggler.subwaytooter.noFcm/jp.juggler.subwaytooter.ActMain
+
+subway_tooter_alt_1:  {}
