--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -81,3 +81,18 @@ subway_tooter:
   - jp.juggler.subwaytooter.noFcm/jp.juggler.subwaytooter.ActMain
 
 subway_tooter_alt_1:  {}
+
+breezy_weather:
+  - org.breezyweather/org.breezyweather.main.MainActivity
+
+burger_party:
+  - com.agateau.burgerparty/com.agateau.burgerparty.MainActivity
+
+iyps:
+  - com.iyps/com.iyps.activities.MainActivity
+
+ruslin:
+  - org.dianqk.ruslin/org.dianqk.ruslin.MainActivity
+
+unstoppable_wallet:
+  - io.horizontalsystems.bankwallet/io.horizontalsystems.bankwallet.MainLauncherAlias
