--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -96,3 +96,42 @@ ruslin:
 
 unstoppable_wallet:
   - io.horizontalsystems.bankwallet/io.horizontalsystems.bankwallet.MainLauncherAlias
+
+confidant:
+  - com.yangdai.encryptor/com.example.encryptor.TextActivity
+
+copilot_ocr:
+  - com.yangdai.simpleocr/com.example.simpleocr.MainActivity
+
+engine:
+  - com.github.whitescent.engine/com.github.whitescent.engine.MainActivity
+
+librepass:
+  - dev.medzik.librepass.android/dev.medzik.librepass.android.MainActivity
+
+mellowmusic:
+  - app.suhasdissa.mellowmusic/app.suhasdissa.mellowmusic.MainActivity
+
+memoryguardian:
+  - ara.memoryguardian/ara.memoryguardian.MainActivity
+
+multicalculator:
+  - com.yangdai.calc/com.yangdai.calc.MainActivity
+
+nightscreen:
+  - com.skyd.nightscreen/com.skyd.nightscreen.ui.activity.MainActivity
+
+quacker:
+  - com.thehcj.quacker/com.jonjomckay.fritter.MainActivity
+
+raca:
+  - com.skyd.raca/com.skyd.raca.ui.activity.MainActivity
+
+rsaf:
+  - com.chiller3.rsaf/com.chiller3.rsaf.SettingsActivity
+
+smart_dock:
+  - cu.axel.smartdock/cu.axel.smartdock.activities.MainActivity
+
+cake_wallet:
+  - com.cakewallet.cake_wallet/com.cakewallet.cake_wallet.MainActivity
