--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -135,3 +135,39 @@ smart_dock:
 
 cake_wallet:
   - com.cakewallet.cake_wallet/com.cakewallet.cake_wallet.MainActivity
+
+always_on:
+  - com.sparkine.muvizedge/com.sparkine.muvizedge.activity.HomeActivity
+
+ath_movil:
+  - com.evertec.athmovil.android/com.evertec.athmovil.android.SplashScreen
+
+ayah:
+  - com.ayah/com.ayah.ui.SplashScreen
+
+freestyle_librelink:
+  - com.freestylelibre.app.fr/com.librelink.app.ui.SplashActivity
+
+honkai:
+  - com.HoYoverse.hkrpgoversea/com.mihoyo.combosdk.ComboSDKActivity
+
+hotschedules:
+  - com.tdr3.hs.android/com.tdr3.hs.android.ui.auth.login.withCredentials.LoginActivity
+
+malloc_vpn:
+  - com.mallocprivacy.antistalkerfree/com.mallocprivacy.antistalkerfree.ui.Navigation2Activity
+
+reminder_pro:
+  - alarm.clock.calendar.reminder.pro/home.Activity_List
+
+substack:
+  - com.substack.app/com.substack.app.ui.AppActivity
+
+toffee:
+  - com.banglalink.toffee/com.banglalink.toffee.ui.splash.SplashScreenActivity
+
+tooot:
+  - com.xmflsct.app.tooot/com.xmflsct.app.tooot.MainActivity
+
+zip:
+  - co.zip/co.zip.view.welcome.InitActivity
