make python output unbuffered in workflows

--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -124,7 +124,7 @@ jobs:
 
     - name: Add new icons
       run: |
-        python resources/utilities/add_icons_wrapper.py
+        python -u resources/utilities/add_icons_wrapper.py
 
     - name: Create a changelog and set custom icons count
       run: |
