--- a/.github/workflows/build_foss.yml
+++ b/.github/workflows/build_foss.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Add new icons
       run: |
-        python resources/utilities/add_icons_wrapper.py
+        python -u resources/utilities/add_icons_wrapper.py
 
     - name: Change version
       run: |
