--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -4,6 +4,8 @@ run-name: ${{ inputs.release_type }} @ ${{ github.sha }}
 permissions:
   contents: write
 
+concurrency: ${{ github.ref }}
+
 on:
   workflow_dispatch:
     inputs:
@@ -122,7 +124,7 @@ jobs:
 
     - name: Add new icons
       run: |
-        python resources/utilities/add_icons_wrapper.py
+        python -u resources/utilities/add_icons_wrapper.py
 
     - name: Create a changelog and set custom icons count
       run: |
