--- a/.github/workflows/build_foss.yml
+++ b/.github/workflows/build_foss.yml
@@ -13,6 +13,8 @@ on:
         default: 100000
         required: true
 
+concurrency: ${{ github.ref }}
+
 env:
   filename: delta-v${{ inputs.version_name }}-foss
 
@@ -37,7 +39,7 @@ jobs:
 
     - name: Add new icons
       run: |
-        python resources/utilities/add_icons_wrapper.py
+        python -u resources/utilities/add_icons_wrapper.py
 
     - name: Change version
       run: |
