4 new icons, 3 compinfos, removed leftovers

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,24 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+omg_soundboard:
+  - audio.omgsoundboard/audio.omgsoundboard.presentation.ui.MainActivity
+
+wordbook:
+  - code.aquaria.wordbook/code.aquaria.wordbook.MainActivity
+
+fairlight_84:
+  - com.miraclegames.farlight84/com.epicgames.ue4.SplashActivity
+
+koho:
+  - ca.koho/ca.koho.MainActivity
+
+phone_alt_20:
+  - com.oplus.dialer/com.android.contacts.DialtactsActivityAlias
+
+gotyme:
+  - ph.com.gotyme/com.tyme.digital.Default
+
+uteka:
+  - ru.uteka.app/ru.uteka.app.MainUI
