13 new icons (5 updated), 2 new compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -29,3 +29,36 @@ gotyme:
 
 uteka:
   - ru.uteka.app/ru.uteka.app.MainUI
+
+texas_am_university:
+  - com.blackboard.android.central.texasam/modolabs.kurogo.activity.ModuleActivity
+
+belkart_pay:
+  - com.belkartpay.belkartpay/com.belkartpay.belkartpay.MainActivity
+
+poweramp_equalizer:
+  - com.maxmpz.equalizer/com.maxmpz.audioplayer.standard_adaptive
+
+whoosh_sharing:
+  - com.punicapp.whoosh/bike.whoosh.client.splash.ui.ClientSplashActivity
+
+puffin_incognito:
+  - com.cloudmosa.puffinIncognito/com.cloudmosa.app.LemonActivity
+
+monopoly_go:
+  - com.scopely.monopolygo/com.scopely.unity.ScopelyUnityActivity
+
+folder_yellow:
+  - com.fas.file.manager.explorer/com.ez.filemanager.MainWrapper.activities.MainDrawerActivity
+
+grover:
+  - com.groverapp/com.groverapp.MainActivity
+
+yuzu_emulator:
+  - org.yuzu.yuzu_emu.ea/org.yuzu.yuzu_emu.ui.main.MainActivity
+
+radiobox:
+  - com.finallevel.radiobox/com.finallevel.radiobox.MainActivity
+
+doom_mighty:
+  - com.bethsoft.ubu/com.google.firebase.MessagingUnityPlayerActivity
