--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -59,3 +59,34 @@ yuzu_emulator:
 
 radiobox:
   - com.finallevel.radiobox/com.finallevel.radiobox.MainActivity
+
+
+avira_phantom_vpn:
+  - com.avira.vpn/com.avira.vpn.MainActivity
+
+cardinal_mobile_banking:
+  - com.cardinalcu/com.cardinalcu.MainActivity
+
+cointrend:
+  - com.cointrend/com.cointrend.presentation.MainActivity
+
+connect_for_lemmy:
+  - com.kuroneko.lemmy_connect/com.kuroneko.lemmy_connect.MainActivity
+
+cryptoprices:
+  - de.cloneapps.crypto_prices/de.cloneapps.crypto_prices.MainActivity
+
+greentuber:
+  - by.green.tuber/by.green.tuber.MainActivity
+
+kuroba_beta:
+  - com.github.k1rakishou.chan.beta/com.github.k1rakishou.chan.activity.StartActivity
+
+metager_search:
+  - de.metager.metagerapp.manual/de.metager.metagerapp.MainActivity
+
+scp_reader:
+  - ca.vsong.scpreader/ca.vsong.scpreader.MainActivity
+
+wordle:
+  - com.vottzapps.wordle/com.unity3d.player.UnityPlayerActivity
