--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -90,3 +90,9 @@ scp_reader:
 
 wordle:
   - com.vottzapps.wordle/com.unity3d.player.UnityPlayerActivity
+
+retroarch:
+  - nes.snes.gba.fcemulator/org.cocos2dx.cpp.AppActivity
+
+camera:
+  - com.android.MGC_3_2_045/com.android.camera.CameraLauncher
