--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -60,7 +60,6 @@ yuzu_emulator:
 radiobox:
   - com.finallevel.radiobox/com.finallevel.radiobox.MainActivity
 
-
 avira_phantom_vpn:
   - com.avira.vpn/com.avira.vpn.MainActivity
 
@@ -96,3 +95,9 @@ retroarch:
 
 camera:
   - com.android.MGC_3_2_045/com.android.camera.CameraLauncher
+
+spowlo:
+  - com.bobbyesp.spowlo/com.bobbyesp.spowlo.MainActivity
+
+streetmeasure:
+  - de.westnordost.streetmeasure/de.westnordost.streetmeasure.MeasureActivity
