rename Arcticons You icon to alt 1

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -126,8 +126,7 @@ androbd:
 anuto_td:
   - ch.logixisland.anuto/ch.logixisland.anuto.view.game.GameActivity
   
-arcticons_you:
-  - com.donnnno.arcticons.you/com.donnnno.arcticons.activities.SplashActivity
+arcticons_you_alt_1: {}
   
 blockinger:
   - org.blockinger.game/org.blockinger.game.activities.MainActivity
